--- a/manga_db/webGUI/templates/auth/login.html
+++ b/manga_db/webGUI/templates/auth/login.html
@@ -7,7 +7,7 @@
     <h3>Login</h3>
     <label>Username: <input type=text class="selectize-input" name=username /></label><br/>
     <label>Password: <input type=password class="selectize-input" name=password /></label>
-    <div class=row-no-margin><button type=submit class="book-read-button button-stack green-color
+    <div class=row-no-margin><button type=submit class="button green-color
     button-leftmost">Login</button><span style="margin-left:5px;"><a href="{{ url_for('auth.register') }}">Register</a></span></div>
 </form>
 {% endblock %}
