--- a/manga_db/webGUI/templates/auth/register.html
+++ b/manga_db/webGUI/templates/auth/register.html
@@ -7,7 +7,7 @@
     <h3>Register</h3>
     <label>Username: <input type=text class="selectize-input" name=username /></label><br/>
     <label>Password: <input type=password class="selectize-input" name=password /></label>
-    <div class=row-no-margin><button type=submit class="book-read-button button-stack green-color
+    <div class=row-no-margin><button type=submit class="button green-color
     button-leftmost">Submit</button></div>
 </form>
 {% endblock %}
