--- a/manga_db/webGUI/templates/show_info.html
+++ b/manga_db/webGUI/templates/show_info.html
@@ -73,9 +73,15 @@
 </div>
 <div class="book-info-container">
 <div class="book-line">
-<div class="book-info">Title</div>
-<div class="book-data" id="Title">
-	{{ book.title }}
+<div class="book-info">English Title</div>
+<div class="book-data" id="EnglishTitle">
+	{{ book.title_eng }}
+</div>
+</div>
+<div class="book-line">
+<div class="book-info">Foreign Title</div>
+<div class="book-data" id="ForeignTitle">
+	{{ book.title_foreign }}
 </div>
 </div>
 <div class="book-line">
