--- a/manga_db/webGUI/templates/show_info.html
+++ b/manga_db/webGUI/templates/show_info.html
@@ -91,6 +91,16 @@
 </div>
 </div>
 <div class="book-line">
+<div class="book-info">Reading Status</div>
+<div class="book-data" id="ReadingStatus">
+    {% if book.read_status is not none %}
+	{{ 'Finished' if book.read_status == 0 else book.read_status }}
+    {% else %}
+    Not Read
+    {% endif %}
+</div>
+</div>
+<div class="book-line">
 <div class="book-info">Status</div>
 <div class="book-data" id="Status">
 	{{ book.status }}
@@ -548,7 +558,10 @@ Remove Book
     </div>
 <div class="books-collection-grid" id="collection{{ collection_name.capitalize() }}">
     {% for c_book in c_books %}
-    <div class="book-grid-item {{ 'read' if 'to-read' not in c_book.list else ''}} {{ 'current' if c_book.id == book.id else '' }}">
+    <div class="book-grid-item 
+        {% if book.read_status is not none %}
+        {{ 'read' if book.read_status == 0 else ''}} {{ 'reading' if book.read_status > 0 else ''}}
+        {% endif %} {{ 'current' if c_book.id == book.id else '' }}">
     <div class="book-grid-item-inner">
 	    {% if c_book.favorite %}
 	    <div class="ribbon fav"><span><i class="fas fa-heart"></i></span></div>
@@ -566,7 +579,7 @@ Remove Book
                 {{ c_book.pages }} pages
             </div>
 	    {% if c_book.my_rating %}
-            <div class="overlay-rate blue-color">
+            <div class="overlay-rate blue-fcolor">
                 {# To cast to a string in an expression, you use x|string() instead of str(x) #}
                 {% for _ in range( c_book.my_rating|round|int() ) %}
                 {# &#9733; would also works but looks better with Fontawesome #}
@@ -586,7 +599,7 @@ Remove Book
                         SHOW
         </a>
     </div>
-    <div class="book-grid-item-title border-read">
+    <div class="book-grid-item-title">
     <span class="title">{{ c_book.title_eng }}</span>
     </div>
 
