ask for confirmation b4 importing book changed funcs in webgui to redirect where it makes sense so urls are more user-friendly jump to book by using searchbar

--- a/manga_db/webGUI/static/style.css
+++ b/manga_db/webGUI/static/style.css
@@ -707,6 +707,9 @@ select:-webkit-autofill:focus {
     margin: 2px;
     display: inline-block;
 }
+.inline-block {
+    display: inline-block;
+}
 input[type=submit] {
     border: none;
     color: #fff;
